--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
+notifications:
+  email: false
+
+language: ruby
 rvm:
-  - 1.8.7
   - 1.9.2
-  - ree
   - rbx
-  - jruby
+  - 1.9.3
+  - 2.0.0
+  - jruby-19mode
+  - rbx-19mode
